--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,18 @@
 version: "3.1"
-services:
-  pgadmin:
-    image: thajeztah/pgadmin4
-    environment:
-      PGADMIN_DEFAULT_EMAIL: postgres@test.com
-      PGADMIN_DEFAULT_PASSWORD: secretpassword
-      PGADMIN_CONFIG_SERVER_MODE: "False"
-    ports:
-      - 5050:5050
-    restart: unless-stopped
-  postgres:
-    container_name: postgres_container
-    image: postgres
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: secretpassword
-    ports:
-      - 5432:5432
-    volumes:
-      - inlamningBNdb:/var/lib/postgresql/data
-    restart: unless-stopped
 
-volumes:
-  inlamningBNdb:
+services:
+  mongo:
+    image: mongo
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: mongo
+      MONGO_INITDB_ROOT_PASSWORD: secretpassword
+
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: mongo
+      ME_CONFIG_MONGODB_ADMINPASSWORD: secretpassword
