--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "nodemon": "^2.0.7",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6"
+  },
+  "devDependencies": {
+    "supertest": "^6.1.3"
   }
 }
